Revision history for Perl extension Metabrik.

1.23.1 
   - bugfix: metabrik: add default repository to %INC so users can use it by.
   - bugfix: core::context: check validity of %INC entries before reloading in reuse Command

1.23.0 Tue  4 Oct 06:53:06 CEST 2016
   - feature: core::shell: capture_mode new Attribute, default to true.
              Captures every external Commands output by default.
   - feature: core::shell: full_pwd new Command.
              Returns the full path to current working directory.
   - bugfix: core::context: sets $USE variable on use when a Brik requires dependencies
   - bugfix: core::shell: handles correctly the exit Command so it returns a code number
   - bugfix: core::global: sets repository Attribute default value
   - bugfix: core::global: creates directories for default Attributes 
             homedir, datadir and repository

1.22.0 Fri Apr 15 18:09:26 CEST 2016
   - feature: core::log: allow_log_override Attribute to allow overriding default log Brik
              Turned off by default to avoid messing with logging.
   - feature: core::log: caller_info_prefix, caller_verbose_prefix, ..., caller_debug_prefix 
              Attributes to prefix log messages by Brik name (or not).
   - bugfix: core::context: do initialize core::context from within new_brik_run Command
   - new: core::log: message Command

1.21.2 N/A
   - bugfix: Metabrik: preinit and check_use_properties to be run only one time per Brik

1.21.1 Wed Mar  2 07:46:01 CET 2016
   - bugfix: core::shell: $HOME set to /tmp if not defined
   - bugfix: core::log: must preinit before init for default Attributes values to be properly set
   - bugfix: metabrik: checks properties and default Attribute values in brik_preinit:
             $self->datadir can now be used from within brik_use_properties()

1.21.0 Fri Feb  5 07:50:14 CET 2016
   - feature: core::shell: ps1 Attribute to customize prompt (limited)