@@ -67,5 +67,5 @@
       ]
    },
    "version" : "1.23",
-   "x_serialization_backend" : "JSON::PP version 2.27300"
+   "x_serialization_backend" : "JSON::PP version 2.27400"
 }
