@@ -1,8 +1,9 @@
 Revision history for Perl extension Metabrik.
 
 1.23.1 
-   - bugfix: metabrik: add default repository to %INC so users can use it by.
+   - bugfix: metabrik: add default repository to %INC so users can use it
    - bugfix: core::context: check validity of %INC entries before reloading in reuse Command
+   - bugfix: core::shell: check an alias exists before trying to display it
 
 1.23.0 Tue  4 Oct 06:53:06 CEST 2016
    - feature: core::shell: capture_mode new Attribute, default to true.
